clang/test/BSC/Negative/Method/Union/union_this_param_check/union_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(int this) { // expected-error {{type of parameter 'this' is wrong, expected 'This*' or 'This' or 'union SimpleUnion*' or 'union SimpleUnion', but found 'int'}}
  return 1;
}